// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test K8sRollingRollback Step should render edit view 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
        >
          <div
            class="formGroup md"
          >
            <div
              class="InputWithIdentifier--txtNameContainer"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  ID
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        Test_A
                      </span>
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  Name
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup sm"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="timeout"
              >
                Timeout
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  style="flex-grow: 1;"
                >
                  <div
                    class="bp3-input-group bp3-fill"
                  >
                    <input
                      class="bp3-input"
                      name="timeout"
                      placeholder="Enter w/d/h/m/s/ms"
                      type="text"
                      value="10m"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test K8sRollingRollback Step should render inputSet view 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          Errors
        </p>
        <pre>
          {}
        </pre>
        <button
          class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test K8sRollingRollback Step should render inputSet view and test validation 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          Errors
        </p>
        <pre>
          {}
        </pre>
        <button
          class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        identifier: Test_A
type: K8sRollingRollback

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test K8sRollingRollback Step should render variable view 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="variablesListTable"
      >
        <div
          class="main"
        >
          <div
            class="text"
          >
            step.rollingRollback.timeout
          </div>
          <div
            class="bp3-popover-wrapper btnWrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button StyledProps--main copyIcon StyledProps--intent-primary"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 8 9"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main"
          style="--text-line-clamp: 1;"
        >
          10m
        </p>
        <div
          class="main"
        >
          <div
            class="text"
          >
            step.rollingRollback.skipDryRun
          </div>
          <div
            class="bp3-popover-wrapper btnWrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button StyledProps--main copyIcon StyledProps--intent-primary"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 8 9"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main"
          style="--text-line-clamp: 1;"
        >
          false
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;
